# 5580-dm-a2-classification

./: .gitignore  .pre-commit-config.yaml  README.md  eda.ipynb  pyproject.toml  rf_classification.ipynb  steps.txt
.github/workflows/: ci.yml
code/: additional_tests.ipynb  car_transformers.py  classification.ipynb  eda.ipynb  knn_model.ipynb  pipeline.ipynb
data/: car.csv  car.parquet  new_perceptron_data.csv  unknown_car_data.csv
report/: references.bib
results/: final_pipeline_test_metrics.csv  final_test_metrics_with_time.csv  label_encoder.joblib  master_model_comparison.csv  model_suite.pkl  pipeline_ANN.joblib  pipeline_KNN_K3.joblib  pipeline_NaiveBayes.joblib  pipeline_RandomForest.joblib  pipeline_SVM_Linear.joblib  pipeline_SVM_RBF.joblib  pipeline_XGBoost.joblib  pipeline_comprehensive_model_comparison.csv  stress_test_100k_final.csv  stress_test_100k_final_full_metrics.csv
src/: 1_eda.ipynb  2_knn_model.ipynb  3_classification.ipynb  4_pipeline.ipynb  5_additional_tests.ipynb  additional_tests.ipynb  car_transformers.py  classification.ipynb  eda.ipynb  knn_model.ipynb  notebook_imports.py  pipeline.ipynb
