[project]
name = "mcda5580-data-mining-a2-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyterlab>=4.5.2",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=23.0.0",
    "ruff>=0.14.14",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "ty>=0.0.13",
    "xgboost>=3.1.3",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
force-sort-within-sections = true

