[project]
name = "a2-classification"
version = "0.1.0"
description = "Vehicle Acceptability Prediction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.1.3",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
force-sort-within-sections = true

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "jupyterlab>=4.5.2",
    "pyarrow>=23.0.0",
    "ruff>=0.14.14",
    "ty>=0.0.13",
]

