[project]
name = "a2-classification"
version = "0.1.0"
description = "Vehicle Acceptability Prediction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.1.3",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.deptry]
# Ignore Jupyter notebooks and virtual environment folders during dependency
# analysis. Notebooks commonly import development-only packages (IPython, joblib
# via scikit-learn) and inject runtime state; excluding them keeps deptry focused
# on production code. Also exclude common venv directories so deptry does not
# scan site-packages.
exclude = ["src/*.ipynb", ".venv/**", "venv/**"]

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "jupyterlab>=4.5.2",
    "pyarrow>=23.0.0",
    "ruff>=0.14.14",
    "ty>=0.0.13",
    # type stubs for pandas belong in dev dependencies
    "pandas-stubs>=2.3.3.260113",
    "ipython>=8.38.0",
]

